# Testing

./: Dockerfile  README.md  eval-start.sh  pyproject.toml
environment/eval/: eval.py
environment/src/CPRL/: agent.py
eval/: eval_config.json  eval_data_['LunarLander-v3'].json  eval_data_['highway-v0'].json  eval_data_['mo-highway-v0'].json  eval_data_['mo-lunar-lander-v3'].json
hans/eval/: eval_data_['FrozenLake-v1'].json
