[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "2025-10-cprl-template"
version = "0.1.0"
description = "Lab Course - Challenging Problems in Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[box2d]>=1.2.1",
    "highway-env>=1.10.2",
    "mo-gymnasium>=1.3.1",
    "numpy>=2.4.4",
    "sb3-contrib>=2.8.0",
    "stable-baselines3[extra]>=2.7.0",
    "swig>=4.4.1",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.uv]
override-dependencies = [
    "opencv-python-headless"
]
